v.1.1.: added alternative filler generating rewriting

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,9 @@
   Asp-it - CHANGELOG
 ##############################
 
+* v.1.1.:
+- Added alternative rewriting for filler generation.
+
 * v.1.0.:
 - Complete prototype for EL formulas
 
